include_directories(
    INCLUDE_DIRS include
)

add_executable(exe_1_1 src/exe_1_1.cpp)

add_executable(exe_1_2 src/exe_1_2.cpp)

add_executable(exe_1_3 src/exe_1_3.cpp)

add_executable(exe_1_4_1 src/exe_1_4_1.cpp)

add_executable(exe_1_4_2 src/exe_1_4_2.cpp)

add_executable(exe_1_4_3 src/exe_1_4_3.cpp)

add_executable(exe_1_4_4 src/exe_1_4_4.cpp)

add_executable(exe_1_5_1 src/exe_1_5_1.cpp)

add_executable(exe_1_5_2 src/exe_1_5_2.cpp)
