include_directories(
    INCLUDE_DIRS include
)

add_executable(hello_world src/hello_world.cpp)

add_executable(ex_1_1 src/ex_1_1.cpp)

add_executable(ex_1_2 src/ex_1_2.cpp)

add_executable(ex_1_3 src/ex_1_3.cpp)

add_executable(ex_1_4_1 src/ex_1_4_1.cpp)

add_executable(ex_1_4_2 src/ex_1_4_2.cpp)

add_executable(ex_1_4_3 src/ex_1_4_3.cpp)

add_executable(ex_1_4_4 src/ex_1_4_4.cpp)

add_executable(ex_1_5_1 src/ex_1_5_1.cpp)

add_executable(ex_1_5_2 src/ex_1_5_2.cpp)
