include_directories(
    INCLUDE_DIRS include
)

add_executable(3_2 src/3_2.cpp)
add_executable(3_4 src/3_4.cpp)
add_executable(3_5-3_14 src/3_5-3_14.cpp)
add_executable(3_15-3_16 src/3_15-3_16.cpp)
add_executable(3_17 src/3_17.cpp)
add_executable(3_20 src/3_20.cpp)
add_executable(3_21-3_24 src/3_21-3_24.cpp)
add_executable(3_25 src/3_25.cpp)
