include_directories(
    INCLUDE_DIRS include
)

add_executable(exe_3_1 src/exe_3_1.cpp)

add_executable(exe_3_2_2 src/exe_3_2_2.cpp)

add_executable(exe_3_2_3 src/exe_3_2_3.cpp)

add_executable(exe_3_3_2 src/exe_3_3_2.cpp)

add_executable(exe_3_3_3 src/exe_3_3_3.cpp)

add_executable(exe_3_4_1 src/exe_3_4_1.cpp)

add_executable(exe_3_4_2 src/exe_3_4_2.cpp)
add_executable(exe_3_5_2 src/exe_3_5_2.cpp)
add_executable(exe_3_5_3 src/exe_3_5_3.cpp)
add_executable(exe_3_5_4 src/exe_3_5_4.cpp)
add_executable(exe_3_5_5 src/exe_3_5_5.cpp)
add_executable(exe_3_6 src/exe_3_6.cpp)
